Fix swagger and add to build
